--- a/app/pom.xml
+++ b/app/pom.xml
@@ -112,6 +112,7 @@
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>2.5.5</version>
+                <type>pom</type>
             </dependency>
 
             <dependency>
