change config mode enum value（start with 1）

--- a/app/core/runner/src/main/resources/application.yml
+++ b/app/core/runner/src/main/resources/application.yml
@@ -19,3 +19,8 @@ server:
 
 logging:
   file: anymock-core.log
+
+thread-pool-task-executor:
+  core-pool-size: 24
+  max-pool-size: 192
+  queue-capacity: 2048
