--- a/app/core/biz/pom.xml
+++ b/app/core/biz/pom.xml
@@ -40,5 +40,9 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-ext</artifactId>
+        </dependency>
     </dependencies>
 </project>
