--- a/app/common/base/pom.xml
+++ b/app/common/base/pom.xml
@@ -37,5 +37,9 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-ext</artifactId>
+        </dependency>
     </dependencies>
 </project>
