return all http interface while space id is null

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-﻿#忽略所有.svn目录
-.svn/
-#忽略eclipse
-.classpath
+﻿.classpath
 .project
 .settings/
 target/
-#忽略idea
 .idea/
 *.iml
-#忽略info
-issue.info
-#忽略upload.py
-upload.py
-output/
-deploy/version.txt
-webroot/
-sql/
-anymock-web.log
-anymock-core.log
