--- a/web/runner/src/main/resources/application-test.yml
+++ b/web/runner/src/main/resources/application-test.yml
@@ -1,6 +1,7 @@
 logging:
   file: logs/anymock-web.log
 
-anymock-core:
-  host: yq01-lizhenxi-dxm.epc.baidu.com
-  http-interface-port: 8330
+anymock:
+  core:
+    host: yq01-lizhenxi-dxm.epc.baidu.com
+    http-interface-port: 8330
