--- a/manager/runner/src/main/resources/anymock-manager-config.yml
+++ b/manager/runner/src/main/resources/anymock-manager-config.yml
@@ -25,6 +25,10 @@ logging:
      %clr([%X{mdc_trace_id}]){faint}
      %clr(%-40.40logger{39}){cyan}
      %clr(:){faint} %m${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
+    file: >
+     %d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}
+     ${LOG_LEVEL_PATTERN:-%5p}
+     ${PID:- } --- [%t] [%X{mdc_trace_id}] %-40.40logger{39}: %m${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
 
 server:
   port: 8329
@@ -33,6 +37,9 @@ anymock:
   core:
     host: 127.0.0.1
     http-interface-port: 8330
+  manager:
+    admin:
+      password: A9E62132FE717B74F504A291F96D3F1B
 
 fe:
   path: file:///C:/Users/lizhenxi01/Desktop/dxm/open-source/anymock-fe/dist/
