--- a/manager/runner/src/main/resources/anymock-manager-config.yml
+++ b/manager/runner/src/main/resources/anymock-manager-config.yml
@@ -41,4 +41,4 @@ anymock:
       password: A9E62132FE717B74F504A291F96D3F1B
 
 fe:
-  path: file:///C:/Users/lizhenxi01/Desktop/dxm/open-source/anymock-fe/dist/
+  path: /anymock-fe/dist/
