--- a/anymock-fe/package.json
+++ b/anymock-fe/package.json
@@ -58,7 +58,7 @@
     "nprogress": "0.2.0",
     "screenfull": "3.3.3",
     "showdown": "1.8.6",
-    "simplemde": "1.11.2",
+    "simplemde": "^1.11.2",
     "sortablejs": "1.7.0",
     "vue": "2.5.17",
     "vue-clipboard2": "0.2.1",
